# ros-four-wheeled-walker

./: readme.txt
src/: .gitignore
src/simplified/: CMakeLists.txt  joint_controller_params.yaml  package.xml  solidModel.urdf.xacro
src/simplified/configs/: joint_controller_params.yaml  solidModel.urdf.xacro  vehicle_params.yaml  walkernew.rviz
src/simplified/configs/move_base/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/simplified/gazebo_plugins/include/: wheel_encoder.h
src/simplified/gazebo_plugins/src/: wheel_encoder.cpp
src/simplified/launch/: full_simulation.launch  joint_controllers.launch  model_simulation.launch  move_base.launch  robot_localization.launch  robot_slam.launch  visualization.launch  world_sim.launch
src/simplified/meshes/: Back Left Leg Revised 2.STL  Core Revised.STL  Core.STL  CoreToLeg.STL  Front Leg.STL  Handle Bottom.STL  Handle Revised.STL  HandleAssembly.STL  HandleBottom.STL  Left Back Leg.STL  Left Front Leg Old.STL  Left Front Leg.STL  Left Handle.STL  Right Back Leg Revised 2.STL  Right Back Leg.STL  Right Front Leg Revised 2.STL  Right Front Leg.STL  Wheel Direction.STL  WheelSpinning.STL  asdf.STL  frontwheelhub.STL  relevant_transformations.txt.txt  wheel.STL  wheelassembly_rev1.STL
src/simplified/src/: base_controller.cpp  encoder_odometry.cpp
src/simplified/urdf/: index.txt  kinectCam.urdf.xacro
src/simplified/worlds/: wall.world
